test/fail/ExtraAccessModifiers.java
class ExtraAccessModifiers{
    public static void main(String[] a){
        System.out.println("Test ");
    }
}

class Test{

    int foo ;

    private int a1(){
		int aux01 ;
       
        return 0 ;
    }

	public int b2(){
		int aux01 ;
       
        return 0 ;
    }
	
}
